<resources>
    <string name="app_name">放开我的剪贴板</string>
    <string name="xposed_module_description">
        这个 Xposed 模块通过动态代理 IClipboard 实现对访问剪贴板的拦截。
        app使用了一些 Android 隐藏的 API，如果您的厂商更改了这些接口，可能会无法使用。
        作者：coolapk @ablist97
    </string>

    <string name="options_search">搜索</string>
    <string name="options_show_system">显示系统应用</string>
    <string name="options_clear_history">清除历史记录</string>
    <string name="options_radical_mode">激进模式</string>
    <string name="options_about">关于</string>
    <string name="options_qas">常见问题</string>

    <string name="title_app">应用程序</string>
    <string name="title_history">使用记录</string>

    <string name="alive_channel_name">后台存活服务</string>
    <string name="alive_channel_description">
        这个通知用来保证 app 的后台存活。如果被系统杀死，目标应用可能无法链接到此 app，这会导致"历史记录"和"记住选择"失效。
    </string>

    <string name="alive_notification_title">@string/alive_channel_name</string>
    <string name="alive_notification_content">正在监听剪贴板，您可以侧滑关闭此通知。</string>

    <string name="about_title">常见问题</string>

</resources>
